--- a/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
@@ -131,44 +131,197 @@
    "execution_count": null,
    "id": "bcfec29b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
    "source": [
     "# 2\t11049\t 행렬 곱셈 순서\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "5 3\n",
+    "3 2\n",
+    "2 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    mats = [(0, 0)]\n",
+    "    for _ in range(N):\n",
+    "        mats.append(tuple(map(int, input().split())))\n",
+    "\n",
+    "    dp = [[0] * (N + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "    for length in range(2, N + 1):\n",
+    "        for start in range(1, N - length + 2):\n",
+    "            end = start + length - 1\n",
+    "\n",
+    "            row_start = mats[start][0]\n",
+    "            col_end = mats[end][1]\n",
+    "            min_multi_val = float('inf')\n",
+    "\n",
+    "            dp_start = dp[start]\n",
+    "            for mid in range(start, end):\n",
+    "                lv = dp_start[mid]\n",
+    "                rv = dp[mid + 1][end]\n",
+    "                new = row_start * mats[mid][1] * col_end\n",
+    "                candi_val = lv + rv + new\n",
+    "\n",
+    "                if candi_val < min_multi_val:\n",
+    "                    min_multi_val = candi_val\n",
+    "\n",
+    "            dp[start][end] = min_multi_val\n",
+    "\n",
+    "    print(dp[1][N])\n",
+    "\n",
     "\n",
     "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "b85c5e46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 3\t1520\t 내리막 길\n",
     "import sys\n",
+    "sys.setrecursionlimit(10**9)\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 5\n",
+    "50 45 37 32 30\n",
+    "35 50 40 20 25\n",
+    "30 30 25 17 28\n",
+    "27 24 22 15 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
+    "    M, N = map(int, input().split())\n",
+    "    mountain = [list(map(int, input().split())) for _ in range(M)]\n",
     "\n",
-    "    pass\n",
+    "    directions = [\n",
+    "        (+1, 0), (0, +1),\n",
+    "        (-1, 0), (0, -1)\n",
+    "    ]\n",
     "\n",
+    "    # dp[i][j] = ij 에서 M, N 까지 도달 할 수 있는 경우의 수 \n",
+    "\n",
+    "    dp = [[-1] * N for _ in range(M)]\n",
+    "\n",
+    "    def dfs(r, c):\n",
+    "\n",
+    "        if r == M-1 and c == N-1:\n",
+    "            return 1\n",
+    "        \n",
+    "        if dp[r][c] != -1:\n",
+    "            return dp[r][c]\n",
+    "        \n",
+    "        ways = 0\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if 0 <= nr < M and 0 <= nc < N:\n",
+    "                if mountain[r][c] > mountain[nr][nc]:\n",
+    "                    ways += dfs(nr, nc)\n",
+    "        \n",
+    "        dp[r][c] = ways\n",
+    "        return ways\n",
+    "        \n",
+    "    print(dfs(0, 0))\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "213a529e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3\t1520\t 내리막 길\n",
+    "import sys\n",
+    "from heapq import heappop, heappush\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 5\n",
+    "50 45 37 32 30\n",
+    "35 50 40 20 25\n",
+    "30 30 25 17 28\n",
+    "27 24 22 15 10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "    M, N = map(int, input().split())\n",
+    "    mountain = [list(map(int, input().split())) for _ in range(M)]\n",
+    "\n",
+    "    directions = [\n",
+    "        (+1, 0), (0, +1),\n",
+    "        (-1, 0), (0, -1)\n",
+    "    ]\n",
+    "\n",
+    "    # dp[r][c] : (0, 0) 출발 (r, c) 까지 도달하는 경로 수\n",
+    "    dp = [[0] * N for _ in range(M)]\n",
+    "    dp[0][0] = 1\n",
+    "\n",
+    "    pq = [(-mountain[0][0], 0, 0)]  # (-마이너스 높이, row, col)\n",
+    "\n",
+    "    while pq:\n",
+    "        h, r, c = heappop(pq)\n",
+    "        height = -h\n",
+    "\n",
+    "        if r == M-1 and c == N-1:\n",
+    "            continue\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if 0 <= nr < M and 0 <= nc < N:\n",
+    "                nxt_h = mountain[nr][nc]\n",
+    "                if height > nxt_h:\n",
+    "                    if dp[nr][nc] == 0:\n",
+    "                        heappush(pq, (-nxt_h, nr, nc))\n",
+    "                    dp[nr][nc] += dp[r][c]\n",
+    "    print(dp[M-1][N-1])\n",
     "solve()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e05f23a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
