--- a/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
@@ -318,30 +318,183 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e05f23a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8fd4745b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y Y N\n"
+     ]
+    }
+   ],
    "source": [
     "# 4\t2629\t 양팔저울\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "2 3 3 3\n",
+    "3\n",
+    "1 4 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    weights = list(map(int, input().split()))\n",
     "\n",
+    "    B = int(input())\n",
+    "    marbles = list(map(int, input().split()))\n",
+    "\n",
+    "    possible = {0}\n",
+    "\n",
+    "    for w in weights:\n",
+    "        new_sums = set()\n",
+    "\n",
+    "        for p in possible:\n",
+    "            new_sums.add(p + w)\n",
+    "            new_sums.add(abs(p-w))\n",
+    "\n",
+    "        possible.update(new_sums)\n",
+    "\n",
+    "    out = [\"Y\" if marble in possible else \"N\" for marble in marbles]\n",
+    "    print(*out)\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "553af471",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y Y N\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\t2629\t 양팔저울\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4\n",
+    "2 3 3 3\n",
+    "3\n",
+    "1 4 10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "    weights = list(map(int, input().split()))\n",
+    "\n",
+    "    M = int(input())\n",
+    "    marbles = list(map(int, input().split()))\n",
+    "\n",
+    "    # dp[i][j] i 번째 추까지 고려했을때 j 무게 측정 가능 여부\n",
+    "    MAX_WEIGHT = 15000\n",
+    "\n",
+    "    dp = [ [False] * (MAX_WEIGHT + 1) for _ in range(N + 1) ]\n",
+    "    dp[0][0] = True\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        weight = weights[i]\n",
+    "        trying = dp[i]\n",
+    "        nxt_try = dp[i + 1]\n",
+    "        for j in range(MAX_WEIGHT + 1):\n",
+    "            if trying[j]:\n",
+    "                if j + weight <= MAX_WEIGHT:\n",
+    "                    nxt_try[j + weight] = True\n",
+    "                nxt_try[j] = True\n",
+    "                nxt_try[abs(j - weight)] = True\n",
+    "                \n",
+    "    result = []\n",
+    "\n",
+    "    for m in marbles:\n",
+    "        if m > MAX_WEIGHT:\n",
+    "            result.append(\"N\")\n",
+    "        elif dp[N][m]:\n",
+    "            result.append(\"Y\")\n",
+    "        else:\n",
+    "            result.append(\"N\")\n",
+    "    print(*result)\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c970275f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y Y N\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\t2629\t 양팔저울\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4\n",
+    "2 3 3 3\n",
+    "3\n",
+    "1 4 10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "    weights = list(map(int, input().split()))\n",
+    "\n",
+    "    M = int(input())\n",
+    "    marbles = list(map(int, input().split()))\n",
+    "\n",
+    "    # visited[idx][weight] = idx 추 까지 고려했을 때 가능한 무게.\n",
+    "\n",
+    "    MAX_WEIGHT = 500 * 30\n",
+    "    visited = [[False] * (MAX_WEIGHT + 1) for _ in range(N + 1)]\n",
+    "    \n",
+    "\n",
+    "    def dfs(idx, cur_weight):\n",
+    "        step = visited[idx]\n",
+    "        if not step[cur_weight]:\n",
+    "            step[cur_weight] = True\n",
+    "\n",
+    "            if idx == N:\n",
+    "                return \n",
+    "            \n",
+    "            weight = weights[idx]\n",
+    "            dfs(idx + 1, cur_weight + weight)\n",
+    "            dfs(idx + 1, abs(cur_weight - weight))\n",
+    "            dfs(idx + 1, cur_weight)\n",
+    "\n",
+    "    dfs(0, 0)\n",
+    "    \n",
+    "    result = []\n",
+    "    for marble in marbles:\n",
+    "        if marble > MAX_WEIGHT:\n",
+    "            result.append(\"N\")\n",
+    "        elif visited[N][marble]:\n",
+    "            result.append(\"Y\")\n",
+    "        else:\n",
+    "            result.append(\"N\")\n",
+    "    print(*result)\n",
     "solve()"
    ]
   },
