--- a/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
@@ -503,19 +503,41 @@
    "execution_count": null,
    "id": "6c6949bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 5\t2293\t 동전 1\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 10\n",
+    "1\n",
+    "2\n",
+    "5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, k = map(int, input().split())\n",
+    "    coins = [int(input()) for _ in range(n)]\n",
+    "\n",
+    "    dp = [0] * (k + 1)  # dp[i] -> i 원을 만드는 경우의 수\n",
+    "    dp[0] = 1\n",
+    "\n",
+    "    for coin in coins:\n",
+    "        for i in range(coin, k + 1):\n",
+    "            dp[i] += dp[i - coin]\n",
+    "    print(dp[k])\n",
+    "\n",
     "\n",
     "solve()"
    ]
@@ -525,20 +547,169 @@
    "execution_count": null,
    "id": "3053b246",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# 6\t7579\t 앱\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 60\n",
+    "30 10 20 35 40\n",
+    "3 0 3 5 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
+    "    in_use = list(map(int, input().split()))\n",
+    "    costs = list(map(int, input().split()))\n",
     "\n",
+    "    max_cost = 100*100\n",
+    "    # dp[i][cost] = max_memory (i 번째 인덱스 프로그램까지 고려했을 때  cost 만큼 아낄때 최대 확모 메모리)\n",
+    "    dp = [[-1] * (max_cost + 1) for _ in range(N + 1)]\n",
+    "    dp[0][0] = 0\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        nxt_memory = in_use[i]\n",
+    "        nxt_cost = costs[i]\n",
+    "\n",
+    "        before = dp[i]\n",
+    "        after = dp[i + 1]\n",
+    "\n",
+    "        # 이전 값 그대로\n",
+    "        for befor_cost in range(max_cost + 1):\n",
+    "            after[befor_cost] = before[befor_cost]\n",
+    "\n",
+    "        for befor_cost in range(max_cost + 1):\n",
+    "            before_max_memory = before[befor_cost]\n",
+    "            if before_max_memory != -1:\n",
+    "\n",
+    "                # 고려하는 프로그램 추가\n",
+    "                after_cost = befor_cost + nxt_cost\n",
+    "                if after_cost <= max_cost:\n",
+    "                    candi_max_memory = after[after_cost]\n",
+    "                    after_max_memory = before_max_memory + nxt_memory\n",
+    "                    after[after_cost] = max(candi_max_memory, after_max_memory)\n",
+    "\n",
+    "    for cost, memory in enumerate(dp[N]):\n",
+    "        if memory >= M:\n",
+    "            print(cost)\n",
+    "            return\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56ff7e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t7579\t 앱\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 60\n",
+    "30 10 20 35 40\n",
+    "3 0 3 5 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N, M = map(int, input().split())\n",
+    "    in_use = list(map(int, input().split()))\n",
+    "    costs = list(map(int, input().split()))\n",
+    "\n",
+    "    max_cost = sum(costs)\n",
+    "\n",
+    "    dp = [0] * (max_cost + 1)\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        cur_memory = in_use[i]\n",
+    "        cur_cost = costs[i]\n",
+    "\n",
+    "        for j in range(max_cost, cur_cost - 1, -1):\n",
+    "            dp[j] = max(dp[j], dp[j - cur_cost] + cur_memory)\n",
+    "\n",
+    "    for cost in range(max_cost + 1):\n",
+    "        if dp[cost] >= M:\n",
+    "            print(cost)\n",
+    "            return\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f4093e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t7579\t 앱\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 60\n",
+    "30 10 20 35 40\n",
+    "3 0 3 5 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N, M = map(int, input().split())\n",
+    "    in_use = list(map(int, input().split()))\n",
+    "    costs = list(map(int, input().split()))\n",
+    "\n",
+    "    dp = {0:0} #{비용 : 확보메모리}\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        cur_memory = in_use[i]\n",
+    "        cur_cost = costs[i]\n",
+    "\n",
+    "        for cost, memory in list(dp.items()):\n",
+    "            new_cost = cost + cur_cost\n",
+    "            new_memory = memory + cur_memory\n",
+    "\n",
+    "            if new_cost not in dp or dp[new_cost] < new_memory:\n",
+    "                dp[new_cost] = new_memory\n",
+    "\n",
+    "    min_cost = float('inf')\n",
+    "    for cost, memory in dp.items():\n",
+    "        if memory >= M and cost < min_cost:\n",
+    "                min_cost = cost\n",
+    "    print(min_cost)\n",
     "solve()"
    ]
   },
@@ -547,21 +718,201 @@
    "execution_count": null,
    "id": "260b22f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "  0   2   2   6\n",
+      "  0   0   5   5\n",
+      "  0   0   0   5\n",
+      "  0   0   0   0\n",
+      "\n",
+      "8\n",
+      "  1   1   2   2   4   4   6   6   8\n",
+      "  0   1   1   2   2   4   4   6   6\n",
+      "  0   0   1   1   3   3   5   5   7\n",
+      "  0   0   0   1   1   3   3   5   5\n",
+      "  0   0   0   0   2   2   4   4   6\n",
+      "  0   0   0   0   0   2   2   4   4\n",
+      "  0   0   0   0   0   0   2   2   4\n",
+      "  0   0   0   0   0   0   0   2   2\n",
+      "  0   0   0   0   0   0   0   0   2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 7\t11062\t 카드 게임\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "1 2 5 2\n",
+    "9\n",
+    "1 1 1 1 2 2 2 2 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n = int(input())\n",
+    "    cards = list(map(int, input().split()))\n",
     "\n",
-    "solve()"
+    "    # dp[i][j]  = i, j 구간에서 근우가 얻을 수 있는 최대 점수.\n",
+    "    dp = [ [0] * (n) for _ in range(n) ]\n",
+    "\n",
+    "    # 1개 남았을때 누구 턴인가? \n",
+    "    # 홀수로 시작하면 마지막 카드는 근우\n",
+    "    # 짝수로 시작하면 마지막 카드는 명우\n",
+    "\n",
+    "    turn = (n - 1) % 2 == 0\n",
+    "    # turn 이 True면, 마지막 카드는 근우\n",
+    "\n",
+    "    if turn: \n",
+    "        for i in range(n):\n",
+    "            dp[i][i] = cards[i]\n",
+    "\n",
+    "    # lenth = 남은카드 길이\n",
+    "    for length in range(2, n + 1):\n",
+    "        turn = not turn\n",
+    "        for i in range(n - length + 1):\n",
+    "            j = i + length - 1\n",
+    "            if turn:\n",
+    "                dp[i][j] = max(cards[i] + dp[i+1][j], dp[i][j-1] + cards[j])\n",
+    "            else:\n",
+    "                dp[i][j] = min(dp[i+1][j], dp[i][j-1])\n",
+    "\n",
+    "    print(dp[0][n-1])\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "85a2b8f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t11062\t 카드 게임\n",
+    "import sys\n",
+    "sys.setrecursionlimit(2000)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "1 2 5 2\n",
+    "9\n",
+    "1 1 1 1 2 2 2 2 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    n = int(input())\n",
+    "    cards = list(map(int, input().split()))\n",
+    "\n",
+    "    # dp[i][j]  = i, j 부터 카드가 남았을 때 근우가 얻을 수 있는 최대 점수.\n",
+    "    dp = [ [-1] * (n) for _ in range(n) ]\n",
+    "\n",
+    "    def game(turn, i, j):\n",
+    "\n",
+    "        if i > j: return 0\n",
+    "\n",
+    "        if dp[i][j] != -1:\n",
+    "            return dp[i][j]\n",
+    "        \n",
+    "        # 근우턴\n",
+    "        if turn:\n",
+    "            pick_left = cards[i] + game(False, i + 1, j)\n",
+    "            pick_right = cards[j] + game(False, i, j -1)\n",
+    "\n",
+    "            dp[i][j] = max(pick_left, pick_right)\n",
+    "\n",
+    "        else:\n",
+    "            pick_left = game(True, i + 1, j)\n",
+    "            pick_right = game(True, i, j - 1)\n",
+    "\n",
+    "            dp[i][j] = min(pick_left, pick_right)\n",
+    "        \n",
+    "        return dp[i][j]\n",
+    "    print(game(True, 0, n-1))\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61f546e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t11062\t 카드 게임\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "1 2 5 2\n",
+    "9\n",
+    "1 1 1 1 2 2 2 2 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    n = int(input())\n",
+    "    cards = list(map(int, input().split()))\n",
+    "\n",
+    "    prefix = [0] * (n + 1)\n",
+    "\n",
+    "    # dp[i][j]  = i, j 구간에서 플레이어가 얻을 수 있는 최고 점수\n",
+    "    dp = [ [0] * (n) for _ in range(n) ]\n",
+    "\n",
+    "    # prifix[i + 1] = 0 부터 i 까지의 합\n",
+    "    for i in range(n):\n",
+    "        prefix[i+1] = prefix[i] + cards[i]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        dp[i][i] = cards[i]\n",
+    "\n",
+    "    for length in range(2, n + 1):\n",
+    "        for i in range(n - length + 1):\n",
+    "            j = i + length - 1\n",
+    "            cur_range_sum = prefix[j+1] - prefix[i]\n",
+    "            dp[i][j] = cur_range_sum - min(dp[i+1][j], dp[i][j-1])\n",
+    "\n",
+    "    print(dp[0][n-1])\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   }
  ],
