--- a/A01_Masteer_Math_By_Coding_in_Python/B12_Linear_algebra/C140_Singular_value_decomposition.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B12_Linear_algebra/C140_Singular_value_decomposition.ipynb
@@ -68,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
