--- a/A02_BAEKJOON/B01_Step/_31_40/C32_동적_계획법과_최단거리_역추적.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C32_동적_계획법과_최단거리_역추적.ipynb
@@ -2,12 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "304694d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10 9 3 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1\t12852\t 1로 만들기 2"
+    "# 1\t12852\t 1로 만들기 2\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "\n",
+    "    parent = dict() # {자식(depth, num) : 부모 (depth: num)}\n",
+    "    visited = set()\n",
+    "    parent[(0, N)] = (-1,-1)  # (-1, -1) 최상단 노드라는 뜻. \n",
+    "\n",
+    "    def bfs():\n",
+    "    \n",
+    "        dq = deque([(0, N)])\n",
+    "        visited.add(N)\n",
+    "        last_node = (0, 0)\n",
+    "\n",
+    "        while dq:\n",
+    "            cur_node = dq.popleft()\n",
+    "            cur_depth, num = cur_node\n",
+    "\n",
+    "            if num == 1:\n",
+    "                last_node = cur_node\n",
+    "                break;\n",
+    "            \n",
+    "            nxt_depth = cur_depth + 1\n",
+    "\n",
+    "            if num % 3 == 0 and (num // 3) not in visited:\n",
+    "                nxt_node = (nxt_depth, num // 3)\n",
+    "                dq.append(nxt_node)\n",
+    "                visited.add(num // 3)\n",
+    "                parent[nxt_node] = cur_node\n",
+    "\n",
+    "            if num % 2 == 0 and (num // 2) not in visited:\n",
+    "                nxt_node = (nxt_depth, num // 2)\n",
+    "                dq.append(nxt_node)\n",
+    "                visited.add(num // 2)\n",
+    "                parent[nxt_node] = cur_node\n",
+    "\n",
+    "            if (num - 1) not in visited:\n",
+    "                nxt_node = (nxt_depth, num - 1)\n",
+    "                dq.append(nxt_node)\n",
+    "                visited.add(num - 1 )\n",
+    "                parent[nxt_node] = cur_node\n",
+    "\n",
+    "        last_depth, last_num = last_node\n",
+    "        result = [last_num]\n",
+    "\n",
+    "        for _ in range(last_depth):\n",
+    "            parent_node = parent[last_node]\n",
+    "            result.append(parent_node[1])\n",
+    "            last_node = parent_node\n",
+    "\n",
+    "        result.reverse()\n",
+    "        \n",
+    "        print(last_depth)\n",
+    "        print(*result)\n",
+    "\n",
+    "    bfs()\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ce397f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10 9 3 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t12852\t 1로 만들기 2\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    parent = dict() # {자식(num) : 부모 (num)}\n",
+    "    parent[N] = -1  # (-1) 최상단 노드 & 방문 했다는 표시. \n",
+    "\n",
+    "    dq = deque([N])\n",
+    "    while dq:\n",
+    "        cur_num = dq.popleft()\n",
+    "\n",
+    "        if cur_num == 1:\n",
+    "            break\n",
+    "\n",
+    "        if cur_num % 3 == 0 and (cur_num // 3) not in parent:\n",
+    "            dq.append(cur_num // 3)\n",
+    "            parent[cur_num // 3] = cur_num\n",
+    "\n",
+    "        if cur_num % 2 == 0 and (cur_num // 2) not in parent:\n",
+    "            dq.append(cur_num // 2)\n",
+    "            parent[cur_num // 2] = cur_num\n",
+    "\n",
+    "        if (cur_num - 1) not in parent:\n",
+    "            dq.append(cur_num - 1)\n",
+    "            parent[cur_num - 1] = cur_num\n",
+    "\n",
+    "    result = [cur_num]\n",
+    "    \n",
+    "    while True:\n",
+    "        parent_num = parent[cur_num]\n",
+    "        if parent_num == -1:\n",
+    "            break\n",
+    "        result.append(parent_num)\n",
+    "        cur_num = parent_num\n",
+    "\n",
+    "    result.reverse()\n",
+    "    \n",
+    "    print(len(result) - 1)\n",
+    "    print(*result)\n",
+    "\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
@@ -17,7 +162,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2\t14002\t 가장 긴 증가하는 부분 수열 4"
+    "# 2\t14002\t 가장 긴 증가하는 부분 수열 4\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -92,8 +245,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
