--- a/A02_BAEKJOON/B01_Step/_31_40/C33_트리.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C33_트리.ipynb
@@ -5,9 +5,143 @@
    "execution_count": null,
    "id": "04b88ba5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1\t11725\t 트리의 부모 찾기"
+    "# 1\t11725\t 트리의 부모 찾기\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''12\n",
+    "1 2\n",
+    "1 3\n",
+    "2 4\n",
+    "3 5\n",
+    "3 6\n",
+    "4 7\n",
+    "4 8\n",
+    "5 9\n",
+    "5 10\n",
+    "6 11\n",
+    "6 12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "    \n",
+    "    for _ in range(N - 1):\n",
+    "        a, b = map(int, input().split())\n",
+    "        graph[a].append(b)\n",
+    "        graph[b].append(a)\n",
+    "\n",
+    "    parent = [0] * (N + 1)\n",
+    "    parent[1] = -1\n",
+    "\n",
+    "    dq = deque([1])\n",
+    "\n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "        for child in graph[cur]:\n",
+    "            if parent[child] == 0:\n",
+    "                parent[child] = cur\n",
+    "                dq.append(child)\n",
+    "\n",
+    "    print(\"\\n\".join(map(str, parent[2:])))   \n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ede0b0bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t11725\t 트리의 부모 찾기\n",
+    "import sys\n",
+    "sys.setrecursionlimit(10**7)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''12\n",
+    "1 2\n",
+    "1 3\n",
+    "2 4\n",
+    "3 5\n",
+    "3 6\n",
+    "4 7\n",
+    "4 8\n",
+    "5 9\n",
+    "5 10\n",
+    "6 11\n",
+    "6 12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "    \n",
+    "    for _ in range(N - 1):\n",
+    "        a, b = map(int, input().split())\n",
+    "        graph[a].append(b)\n",
+    "        graph[b].append(a)\n",
+    "\n",
+    "    parent = [0] * (N + 1)\n",
+    "    parent[1] = -1\n",
+    "\n",
+    "    def dfs(cur):\n",
+    "        for child in graph[cur]:\n",
+    "            if parent[child] == 0:\n",
+    "                parent[child] = cur\n",
+    "                dfs(child)\n",
+    "    \n",
+    "    dfs(1) # -1 은 루트 노드\n",
+    "    print(\"\\n\".join(map(str, parent[2:])))   \n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -72,8 +206,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
