--- a/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
@@ -1,39 +1,364 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "8eba7cfd",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a39ccd00",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 0 1 2 3 4 5 6\n",
+      "-1 -1 -1 -1 -1 -1 -1 -1\n",
+      "-1 0 0 0 1 2 0 1\n",
+      "-1 -1 -1 -1 0 1 2 3\n",
+      "-1 -1 0 1 0 0 1 2\n",
+      "-1 -1 -1 -1 0 1 2 3\n"
+     ]
+    }
+   ],
    "source": [
-    "### 01회차 모의고사 D-30일 제목 : C01_D-30_260205.ipynb\n",
+    "# 1. 알고(구현): 백준 10709 (기상캐스터) - https://www.acmicpc.net/problem/10709\n",
+    "import sys\n",
     "\n",
-    "[1차 코딩테스트 대비]\n",
-    "1. 알고(구현): 백준 10709 (기상캐스터) - https://www.acmicpc.net/problem/10709\n",
-    "2. 알고(수학): 백준 2477 (참외밭) - https://www.acmicpc.net/problem/2477\n",
-    "3. 알고(Map): 백준 1302 (베스트셀러) - https://www.acmicpc.net/problem/1302\n",
-    "4. 알고(그리디): 백준 2217 (로프) - https://www.acmicpc.net/problem/2217\n",
-    "5. SQL(Lv.1): 강원도에 위치한 생산공장 목록 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131112\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6 8\n",
+    ".c......\n",
+    "........\n",
+    ".ccc..c.\n",
+    "....c...\n",
+    "..c.cc..\n",
+    "....c...''')\n",
     "\n",
-    "[2차 코딩테스트 대비]\n",
-    "1. 알고(시뮬): 백준 17144 (미세먼지 안녕!) - https://www.acmicpc.net/problem/17144\n",
-    "2. 알고(DP): 백준 14728 (벼락치기) - https://www.acmicpc.net/problem/14728\n",
-    "3. 알고(그래프): 백준 1238 (파티) - https://www.acmicpc.net/problem/1238\n",
-    "4. 알고(백트래킹): 백준 1759 (암호 만들기) - https://www.acmicpc.net/problem/1759\n",
-    "5. SQL(Lv.3): 대여 횟수가 많은 자동차들의 월별 대여 횟수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/151139"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "    \n",
+    "    H, W = map(int, input().split())\n",
+    "\n",
+    "    clouds = [input().rstrip() for _ in range(H)]\n",
+    "    result = [[-1] * W for _ in range(H)]\n",
+    "\n",
+    "    for r in range(H):\n",
+    "        row = clouds[r]\n",
+    "        for c in range(W):\n",
+    "            for check_idx in range(c, -1, -1):\n",
+    "                if row[check_idx] == 'c':\n",
+    "                    result[r][c] = c - check_idx\n",
+    "                    break\n",
+    "    for row in result:\n",
+    "        print(*row)\n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39ccd00",
+   "id": "1f412b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47600\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 알고(수학): 백준 2477 (참외밭) - https://www.acmicpc.net/problem/2477\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''7\n",
+    "4 50\n",
+    "2 160\n",
+    "3 30\n",
+    "1 60\n",
+    "3 20\n",
+    "1 100''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    K = int(input())\n",
+    "\n",
+    "    lines = [list(map(int, input().split())) for _ in range(6)]\n",
+    "\n",
+    "    max_width, max_w_idx = 0, 0\n",
+    "    max_height, max_h_idx = 0, 0\n",
+    "\n",
+    "    for i in range(6):\n",
+    "        d, length = lines[i]\n",
+    "\n",
+    "        # width (동, 서)\n",
+    "        if d < 3 and length > max_width:\n",
+    "            max_w_idx = i\n",
+    "            max_width = length\n",
+    "        if d > 2 and length > max_height:\n",
+    "            max_h_idx = i\n",
+    "            max_height = length\n",
+    "\n",
+    "    # 3번째 뒤가 짧은 사각형의 인덱스임을 알아야 함.\n",
+    "    min_width = lines[(max_w_idx + 3) % 6][1]\n",
+    "    min_height = lines[(max_h_idx + 3) % 6][1]\n",
+    "\n",
+    "    big_area = max_width * max_height\n",
+    "    samll_area = min_width * min_height\n",
+    "\n",
+    "    print((big_area-samll_area)*K)\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd6dcf70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 알고(Map): 백준 1302 (베스트셀러) - https://www.acmicpc.net/problem/1302\n",
+    "import sys\n",
+    "from heapq import heappush\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "table\n",
+    "chair\n",
+    "table\n",
+    "table\n",
+    "lamp\n",
+    "door\n",
+    "lamp\n",
+    "table\n",
+    "chair''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    count = dict()\n",
+    "    for _ in range(N):\n",
+    "        book = input().rstrip()\n",
+    "        count[book] = count.get(book, 0) + 1\n",
+    "\n",
+    "    pq = []\n",
+    "    for key, val in count.items():\n",
+    "        heappush(pq, (-val, key))\n",
+    "\n",
+    "    print(pq[0][1])\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5c3ba0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. 알고(그리디): 백준 2217 (로프) - https://www.acmicpc.net/problem/2217\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "10\n",
+    "15''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "    \n",
+    "    ropes = [int(input()) for _ in range(N)]\n",
+    "    ropes.sort()\n",
+    "\n",
+    "    max_w = 0\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        can_w = ropes[i]\n",
+    "        \n",
+    "        # 들 수 있는 무게는 남은 로프 수\n",
+    "        can_up_w = can_w * (N - i)\n",
+    "\n",
+    "        if can_up_w > max_w:\n",
+    "            max_w = can_up_w\n",
+    "\n",
+    "    print(max_w)\n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67396327",
+   "metadata": {},
+   "source": [
+    "```sql\n",
+    "-- 5. SQL(Lv.1): 강원도에 위치한 생산공장 목록 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131112\n",
+    "\n",
+    "SELECT\n",
+    "    FACTORY_ID,\n",
+    "    FACTORY_NAME,\n",
+    "    ADDRESS\n",
+    "FROM\n",
+    "    FOOD_FACTORY\n",
+    "ORDER BY\n",
+    "    FACTORY_ID;\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf45cda8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1. 알고(시뮬): 백준 17144 (미세먼지 안녕!) - https://www.acmicpc.net/problem/17144\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d554dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. 알고(DP): 백준 14728 (벼락치기) - https://www.acmicpc.net/problem/14728\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f75edeab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 알고(그래프): 백준 1238 (파티) - https://www.acmicpc.net/problem/1238\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f721e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. 알고(백트래킹): 백준 1759 (암호 만들기) - https://www.acmicpc.net/problem/1759\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0246a45f",
+   "metadata": {},
+   "source": [
+    "```sql\n",
+    "-- 5. SQL(Lv.3): 대여 횟수가 많은 자동차들의 월별 대여 횟수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/151139\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
