--- a/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
@@ -247,20 +247,109 @@
    "execution_count": null,
    "id": "cf45cda8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "188\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17144 (미세먼지 안녕!) - https://www.acmicpc.net/problem/17144\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 8 1\n",
+    "0 0 0 0 0 0 0 9\n",
+    "0 0 0 0 3 0 0 8\n",
+    "-1 0 5 0 0 0 22 0\n",
+    "-1 8 0 0 0 0 0 0\n",
+    "0 0 0 0 0 10 43 0\n",
+    "0 0 5 0 15 0 0 0\n",
+    "0 0 40 0 0 0 20 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
+    "    R, C, T = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    room = [list(map(int, input().split())) for _ in range(R)]\n",
+    "    \n",
+    "    directions = [\n",
+    "        (+1, 0), (-1, 0),\n",
+    "        (0, +1), (0, -1)\n",
+    "    ]\n",
     "\n",
+    "    cleaner = [r for r in range(R) for c in range(C) if room[r][c] == -1 ]\n",
+    "    cleaner.sort()\n",
+    "\n",
+    "    def next_time(arr):\n",
+    "        new = [[0] * C for _ in range(R)]\n",
+    "\n",
+    "        for r in range(R):\n",
+    "            for c in range(C):\n",
+    "                cur_val = arr[r][c]\n",
+    "\n",
+    "                if cur_val == -1:\n",
+    "                    new[r][c] = -1\n",
+    "\n",
+    "                else:\n",
+    "                    count = 0\n",
+    "                    diffu = cur_val // 5\n",
+    "\n",
+    "                    for dr, dc in directions:\n",
+    "                        nr, nc = r + dr, c + dc\n",
+    "                        if 0 <= nr < R and 0 <= nc < C and arr[nr][nc] != -1:\n",
+    "                            new[nr][nc] += diffu # 확산\n",
+    "                            count += 1\n",
+    "                    \n",
+    "                    new[r][c] += cur_val - (diffu * count)\n",
+    "\n",
+    "        return new\n",
+    "\n",
+    "    def next_clean(arr):\n",
+    "        up_row = cleaner[0]\n",
+    "        down_row = cleaner[1]\n",
+    "\n",
+    "        # 맨 좌축 부터\n",
+    "        for i in range(up_row - 1, 0, -1):\n",
+    "            arr[i][0] = arr[i-1][0]\n",
+    "\n",
+    "        for i in range(down_row + 1, R - 1):\n",
+    "            arr[i][0] = arr[i+1][0]\n",
+    "\n",
+    "        # 맨위, 맨 아래\n",
+    "        for i in range(C-1):\n",
+    "            arr[0][i] = arr[0][i+1]\n",
+    "            arr[R-1][i] = arr[R-1][i+1]\n",
+    "\n",
+    "        # 맨 우측\n",
+    "        for i in range(up_row):\n",
+    "            arr[i][C-1] = arr[i+1][C-1]\n",
+    "\n",
+    "        for i in range(R-1, down_row, -1):\n",
+    "            arr[i][C-1] = arr[i-1][C-1]\n",
+    "\n",
+    "\n",
+    "        # 중앙\n",
+    "        for i in range(C-1, 1, -1):\n",
+    "            arr[up_row][i] = arr[up_row][i-1]\n",
+    "            arr[down_row][i] = arr[down_row][i-1]\n",
+    "\n",
+    "        arr[up_row][1] = 0\n",
+    "        arr[down_row][1] = 0\n",
+    "\n",
+    "    for _ in range(T):\n",
+    "        room = next_time(room)\n",
+    "        next_clean(room)\n",
+    "\n",
+    "    result = 0\n",
+    "    for row in room:\n",
+    "        result += sum(row)\n",
+    "\n",
+    "    print(result + 2)\n",
     "solve()\n"
    ]
   },
@@ -269,40 +358,120 @@
    "execution_count": null,
    "id": "c6d554dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 14728 (벼락치기) - https://www.acmicpc.net/problem/14728\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 310\n",
+    "50 40\n",
+    "100 70\n",
+    "200 150''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "\n",
     "def solve():\n",
     "\n",
+    "    N, T = map(int, input().split())\n",
+    "\n",
+    "    chapters = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    # dp[i] = i 시간을 썼을 때 얻을 수 있는 최대 점수.\n",
+    "    dp = [0] * (T + 1)\n",
+    "\n",
+    "    for time_cost, score_val in chapters:\n",
+    "        for i in range(T, time_cost-1, -1):\n",
+    "            dp[i] = max(dp[i], dp[i - time_cost] + score_val)\n",
+    "\n",
+    "    print(dp[T])\n",
     "    pass\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "f75edeab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1238 (파티) - https://www.acmicpc.net/problem/1238\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 8 2\n",
+    "1 2 4\n",
+    "1 3 2\n",
+    "1 4 7\n",
+    "2 1 1\n",
+    "2 3 5\n",
+    "3 1 2\n",
+    "3 4 4\n",
+    "4 2 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
+    "    N, M, X = map(int, input().split())\n",
     "\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "    reverse_graph = [[] for _ in range(N + 1)]\n",
+    "\n",
+    "    for _ in range(M):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        graph[a].append((b, c))\n",
+    "        reverse_graph[b].append((a, c))\n",
+    "\n",
+    "    INF = sys.maxsize\n",
+    "    \n",
+    "    def dijkstra(target_graph):\n",
+    "        min_dist = [INF] * (N + 1)\n",
+    "        pq = [(0, X)]\n",
+    "        min_dist[X] = 0\n",
+    "\n",
+    "        while pq:\n",
+    "            cur_dist, cur = heappop(pq)\n",
+    "\n",
+    "            if cur_dist <= min_dist[cur]: \n",
+    "\n",
+    "                for nxt, cost in target_graph[cur]:\n",
+    "                    nxt_dist = cur_dist + cost\n",
+    "\n",
+    "                    if nxt_dist < min_dist[nxt]:\n",
+    "                        min_dist[nxt] = nxt_dist\n",
+    "                        heappush(pq, (nxt_dist, nxt)) \n",
+    "        return min_dist\n",
+    "\n",
+    "    dist = dijkstra(graph)\n",
+    "    dist_rev = dijkstra(reverse_graph)\n",
+    "\n",
+    "    max_value = 0\n",
+    "    for i in range(1, N+1):\n",
+    "        total = dist[i] + dist_rev[i]\n",
+    "        if total > max_value:\n",
+    "            max_value = total\n",
+    "\n",
+    "    print(max_value)\n",
     "    pass\n",
     "\n",
     "solve()\n"
@@ -313,18 +482,69 @@
    "execution_count": null,
    "id": "e0f721e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acis\n",
+      "acit\n",
+      "aciw\n",
+      "acst\n",
+      "acsw\n",
+      "actw\n",
+      "aist\n",
+      "aisw\n",
+      "aitw\n",
+      "astw\n",
+      "cist\n",
+      "cisw\n",
+      "citw\n",
+      "istw\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1759 (암호 만들기) - https://www.acmicpc.net/problem/1759\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 6\n",
+    "a t c i s w''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "def solve():\n",
     "\n",
+    "    L, C = map(int, input().split())\n",
+    "\n",
+    "    chars = list(input().split())\n",
+    "    chars.sort()\n",
+    "    vowels = set(['a', 'e', 'i', 'o', 'u'])\n",
+    "\n",
+    "    result = []\n",
+    "    def dfs(idx, path):\n",
+    "        if len(path) == L:\n",
+    "            v_count = 0\n",
+    "            c_count = 0\n",
+    "\n",
+    "            for char in path:\n",
+    "                if char in vowels:\n",
+    "                    v_count += 1\n",
+    "                else: \n",
+    "                    c_count += 1\n",
+    "            \n",
+    "            if v_count >=1 and c_count >=2:\n",
+    "                result.append(\"\".join(path))\n",
+    "            return\n",
+    "\n",
+    "        for i in range(idx, C):\n",
+    "            path.append(chars[i])\n",
+    "            dfs(i + 1, path)\n",
+    "            path.pop()            \n",
+    "\n",
+    "    dfs(0, [])\n",
+    "    print(\"\\n\".join(result))\n",
     "    pass\n",
     "\n",
     "solve()\n"
