--- a/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C01_D-30_260205.ipynb
@@ -556,8 +556,30 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.3): 대여 횟수가 많은 자동차들의 월별 대여 횟수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/151139\n",
-    "\n",
+    "-- 5. SQL(Lv.3): 대여 횟수가 많은 자동차들의 월별 대여 횟수 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/151139\n",
+    "SELECT\n",
+    "    MONTH(START_DATE) AS MONTH,\n",
+    "    CAR_ID,\n",
+    "    COUNT(*) AS RECORDS\n",
+    "FROM\n",
+    "    CAR_RENTAL_COMPANY_RENTAL_HISTORY\n",
+    "WHERE\n",
+    "    START_DATE BETWEEN '2022-08-01' AND '2022-10-31'\n",
+    "    AND CAR_ID IN (\n",
+    "        SELECT CAR_ID\n",
+    "        FROM CAR_RENTAL_COMPANY_RENTAL_HISTORY\n",
+    "        WHERE START_DATE BETWEEN '2022-08-01' AND '2022-10-31'\n",
+    "        GROUP BY CAR_ID\n",
+    "        HAVING COUNT(*) >= 5\n",
+    "    )\n",
+    "GROUP BY\n",
+    "    MONTH, CAR_ID\n",
+    "HAVING\n",
+    "    RECORDS > 0\n",
+    "ORDER BY\n",
+    "    MONTH ASC,\n",
+    "    CAR_ID DESC;\n",
     "```"
    ]
   }
